crates/nexus-macros/tests/macro_compile_fail/domain_event_empty_enum.stderr
error: DomainEvent enum must have at least one variant.
 --> tests/macro_compile_fail/domain_event_empty_enum.rs:4:6
  |
4 | enum EmptyEvent {}
  |      ^^^^^^^^^^
