crates/nexus-macros/tests/macro_compile_fail/domain_event_empty_enum.rs
/// DomainEvent enum must have at least one variant.

#[derive(Debug, Clone, nexus::DomainEvent)]
enum EmptyEvent {}

fn main() {}
